deploy/chengdu.beagle/verdantflare-music/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: verdantflare-music
  labels:
    app.kubernetes.io/name: verdantflare-music
    hami.io/webhook: ignore
